# atm-manager

./: CMakeLists.txt  db-cheatsheet.md
.cache/clangd/index/: auth.c.88C8F49433A39F9E.idx  auth.h.82218D1CAB6AB1FB.idx  colors.h.84981661F6DF2538.idx  db.c.220F12C208AE4AA0.idx  db.h.3EA00A5C2AC2B5E4.idx  main.c.CB910288631C9BA1.idx  menus.c.250BD98AB8D541E7.idx  menus.h.1FA3EBF52CCFAF44.idx  windows.c.02CC016E291AF7BE.idx  windows.h.7A486A9C0633ADB4.idx
data/: atm.db
include/: auth.h  db.h
include/ui/: colors.h  menus.h  window.h  windows.h
src/: auth.c  db.c  main.c  menus.c  windows.c
